--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <noscript>
       <strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div class="container-fluid">
+    <div class="container-fluid px-md-5 px-3">
        
       <div id="app">        
                
