social sharing feature added

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
 
     <link rel="icon" href="<%= BASE_URL %>favicon2.ico">
     <link rel="stylesheet" href="<%= BASE_URL %>styles.css"  type = "text/css"/>
+
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5f370d4e46e1c70012113dbf&product=inline-share-buttons" async="async"></script>
+    
   </head>
   <body>
     <noscript>
