--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,13 @@
     <link rel="stylesheet" href="<%= BASE_URL %>styles.css"  type = "text/css"/>
 
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5f370d4e46e1c70012113dbf&product=inline-share-buttons" async="async"></script>
+
+    <link rel="stylesheet" 
+          href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/styles/default.min.css">
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.3/highlight.min.js"></script>
+    
+    <script>hljs.initHighlightingOnLoad();</script>
     
   </head>
   <body>
